added driver gifs, and user constructor information

--- a/index.html
+++ b/index.html
@@ -9,15 +9,75 @@
   </head>
   <body>
     <h1 class="header">F1 Fantasy 2022</h1>
-    <image></image>
+    <div class="driver-card">
+      <div class="driver-info">
+        <div class="max"><img src="./gif/max.gif" alt="max" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="checko"><img src="./gif/checko.gif" alt="Checko" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="carlos"><img src="./gif/carlos.gif" alt="Carlos" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="charles"><img src="./gif/charles.gif" alt="Charles" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="lewis"><img src="./gif/lewis.gif" alt="Lewis" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="george"><img src="./gif/george.gif" alt="George" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="lando"><img src="./gif/lando.gif" alt="Lando" /></div>
+      </div>
+      <div class="driver-info">
+        <div class="daniel"><img src="./gif/daniel.gif" alt="Daniel" /></div>
+      </div>
+    </div>
     <div class="card">
-      <div class="season-info"></div>
-      <div class="team-info">Tara</div>
-      <div class="team-info">Katie</div>
-      <div class="team-info">Jason</div>
-      <div class="team-info">Scott</div>
-      <div class="team-info">Graeme</div>
-      <div class="team-info">Pete</div>
+      <div class="season-info">
+        <div class="season-catagories">Constructor</div>
+        <div class="season-catagories">Weekly Drivers</div>
+        <div class="season-catagories">Weekly Score</div>
+        <div class="season-catagories">Season Total</div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Tara - "No Verstoppin Me!"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Katie - "LandoNMe"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Jason - "Silver-Stoned"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Scott - "I Monza Toilet"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Graeme - "Imola Bout The Box"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
+      <div class="season-info">
+        <div class="team-info">Pete - "Guenther get there...eventually"</div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+        <div class="season-catagories"></div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
