--- a/index.html
+++ b/index.html
@@ -36,47 +36,49 @@
       </div>
     </div>
     <div class="card">
-      <div class="season-info">
-        <div class="season-catagories">Constructor</div>
-        <div class="season-catagories">Weekly Drivers</div>
+      <div class="season-info-catagory">
+        <div class="season-catagory">Constructor</div>
+        <div class="season-catagories">
+          -----------Weekly Drivers-----------
+        </div>
         <div class="season-catagories">Weekly Score</div>
         <div class="season-catagories">Season Total</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">Ver / MSC</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">LeC / Bot</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">Nor / Rus</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">Mag / Ric</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-graeme">
         <div class="team-info">Graeme - "Imola Bout The Box"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">Ala / Ham</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
-      <div class="season-info">
+      <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there...eventually"</div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
-        <div class="season-catagories"></div>
+        <div class="weekly-drivers">Sai / Per</div>
+        <div class="weekly-total">0</div>
+        <div class="season-total">0</div>
       </div>
     </div>
     <script src="script.js"></script>
