--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
         <div class="weekly-drivers">Ver / MSC</div>
-        <div class="weekly-total">0</div>
-        <div class="season-total">0</div>
+        <div class="weekly-total">8</div>
+        <div class="season-total">8</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
         <div class="weekly-drivers">LeC / Bot</div>
-        <div class="weekly-total">0</div>
-        <div class="season-total">0</div>
+        <div class="weekly-total">9</div>
+        <div class="season-total">9</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
         <div class="weekly-drivers">Nor / Rus</div>
-        <div class="weekly-total">0</div>
-        <div class="season-total">0</div>
+        <div class="weekly-total">4</div>
+        <div class="season-total">4</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
         <div class="weekly-drivers">Mag / Ric</div>
-        <div class="weekly-total">0</div>
-        <div class="season-total">0</div>
+        <div class="weekly-total">4</div>
+        <div class="season-total">4</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Imola Bout The Box"</div>
@@ -77,8 +77,8 @@
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there...eventually"</div>
         <div class="weekly-drivers">Sai / Per</div>
-        <div class="weekly-total">0</div>
-        <div class="season-total">0</div>
+        <div class="weekly-total">11</div>
+        <div class="season-total"11</div>
       </div>
     </div>
     <script src="script.js"></script>
