name change and beggining css responsive changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="season-total">06</div>
       </div>
       <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Imola Bout The Box"</div>
+        <div class="team-info">Graeme - "Legendary Skid Marks"</div>
         <div class="weekly-drivers">Ala / Ham</div>
         <div class="weekly-total">00</div>
         <div class="season-total">00</div>
