--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Ver / MSC</div>
+        <div class="weekly-drivers">Ala / Sai</div>
         <div class="weekly-total">34</div>
         <div class="season-total">34</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">LeC / Bot</div>
+        <div class="weekly-drivers">Ver / Gas</div>
         <div class="weekly-total">27</div>
         <div class="season-total">27</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Nor / Rus</div>
+        <div class="weekly-drivers">Nor / Ham</div>
         <div class="weekly-total">31</div>
         <div class="season-total">31</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Mag / Ric</div>
+        <div class="weekly-drivers">Per / Mag</div>
         <div class="weekly-total">06</div>
         <div class="season-total">06</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Ala / Ham</div>
+        <div class="weekly-drivers">Lec / Ric</div>
         <div class="weekly-total">00</div>
         <div class="season-total">00</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there...eventually"</div>
-        <div class="weekly-drivers">Sai / Per</div>
+        <div class="weekly-drivers">Rus / Bot</div>
         <div class="weekly-total">29</div>
         <div class="season-total">29</div>
       </div>
