race update with rank changes

--- a/index.html
+++ b/index.html
@@ -44,41 +44,41 @@
         <div class="season-catagories">Weekly Score</div>
         <div class="season-catagories">Season Total</div>
       </div>
-      <div class="season-info-tara">
-        <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Ala / Sai</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">34</div>
-      </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
         <div class="weekly-drivers">Ver / Gas</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">27</div>
+        <div class="weekly-total">26</div>
+        <div class="season-total">53</div>
       </div>
-      <div class="season-info-jason">
-        <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Nor / Ham</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">31</div>
-      </div>
-      <div class="season-info-scott">
-        <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Per / Mag</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">06</div>
-      </div>
-      <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Lec / Ric</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">00</div>
+      <div class="season-info-tara">
+        <div class="team-info">Tara - "No Verstoppin Me!"</div>
+        <div class="weekly-drivers">Ala / Sai</div>
+        <div class="weekly-total">17</div>
+        <div class="season-total">51</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there...eventually"</div>
         <div class="weekly-drivers">Rus / Bot</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">29</div>
+        <div class="weekly-total">16</div>
+        <div class="season-total">45</div>
+      </div>
+      <div class="season-info-jason">
+        <div class="team-info">Jason - "Silver-Stoned"</div>
+        <div class="weekly-drivers">Nor / Ham</div>
+        <div class="weekly-total">08</div>
+        <div class="season-total">39</div>
+      </div>
+      <div class="season-info-graeme">
+        <div class="team-info">Graeme - "Legendary Skid Marks"</div>
+        <div class="weekly-drivers">LeC / Ric</div>
+        <div class="weekly-total">18</div>
+        <div class="season-total">18</div>
+      </div>
+      <div class="season-info-scott">
+        <div class="team-info">Scott - "I Monza Toilet"</div>
+        <div class="weekly-drivers">Per / Mag</div>
+        <div class="weekly-total">12</div>
+        <div class="season-total">18</div>
       </div>
     </div>
     <script src="script.js"></script>
