--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Ver / Gas</div>
-        <div class="weekly-total">26</div>
+        <div class="weekly-drivers">Ham / Gas</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">53</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Ala / Sai</div>
-        <div class="weekly-total">15</div>
+        <div class="weekly-drivers">Sai / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">49</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">Rus / Bot</div>
-        <div class="weekly-total">16</div>
+        <div class="weekly-drivers">Rus / Ala</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">45</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Nor / Ham</div>
-        <div class="weekly-total">08</div>
+        <div class="weekly-drivers">LeC / Vet</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">39</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">LeC / Ric</div>
-        <div class="weekly-total">18</div>
+        <div class="weekly-drivers">Per / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">18</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Per / Mag</div>
-        <div class="weekly-total">12</div>
+        <div class="weekly-drivers">Ver / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">18</div>
       </div>
     </div>
