updated scores and positioning

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="season-total">63</div>
       </div>
       <div class="season-info-pete">
-        <div class="team-info">Pete - "Guen63ther get there ...eventually"</div>
+        <div class="team-info">Pete - "Guenther get there ...eventually"</div>
         <div class="weekly-drivers">Rus / Ala</div>
         <div class="weekly-total">17</div>
         <div class="season-total">62</div>
