--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Sai / Bot</div>
-        <div class="weekly-total">20</div>
+        <div class="weekly-drivers">Sai / Gas</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">69</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Ham / Gas</div>
-        <div class="weekly-total">10</div>
+        <div class="weekly-drivers">Ver / Vet</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">63</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">Rus / Ala</div>
-        <div class="weekly-total">17</div>
+        <div class="weekly-drivers">Per / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">62</div>
       </div>
 
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Ver / Oco</div>
-        <div class="weekly-total">31</div>
+        <div class="weekly-drivers">Ham / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">49</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Per / Nor</div>
-        <div class="weekly-total">23</div>
+        <div class="weekly-drivers">Rus / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">41</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">LeC / Vet</div>
+        <div class="weekly-drivers">LeC / Ric</div>
         <div class="weekly-total">00</div>
         <div class="season-total">39</div>
       </div>
