weekly driver updates

--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Gas / Rus</div>
         <div class="weekly-total">00</div>
         <div class="season-total">96</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Ala / Tsu</div>
         <div class="weekly-total">00</div>
         <div class="season-total">88</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Sai / Nor</div>
         <div class="weekly-total">00</div>
         <div class="season-total">79</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">LeC / Ham</div>
         <div class="weekly-total">00</div>
         <div class="season-total">57</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Ver / Oco</div>
         <div class="weekly-total">00</div>
         <div class="season-total">55</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Per / Ric</div>
         <div class="weekly-total">00</div>
         <div class="season-total">51</div>
       </div>
