--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">ALA / STR</div>
         <div class="weekly-total">00</div>
         <div class="season-total">121</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Sai / Nor</div>
         <div class="weekly-total">00</div>
         <div class="season-total">94</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Ver / Tsu</div>
         <div class="weekly-total">00</div>
         <div class="season-total">81</div>
       </div>
 
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Rus / Vet</div>
         <div class="weekly-total">00</div>
         <div class="season-total">81</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">LeC/ Ric</div>
         <div class="weekly-total">00</div>
         <div class="season-total">74</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">/</div>
+        <div class="weekly-drivers">Per / Gas</div>
         <div class="weekly-total">00</div>
         <div class="season-total">69</div>
       </div>
