--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">ALA / STR</div>
+        <div class="weekly-drivers">Ala / Str</div>
         <div class="weekly-total">00</div>
         <div class="season-total">121</div>
       </div>
