--- a/index.html
+++ b/index.html
@@ -45,39 +45,39 @@
         <div class="season-catagories">Season Total</div>
       </div>
       <div class="season-info-pete">
-        <div class="team-info">Pete - "Guenther get there ...eventually"</div>
-        <div class="weekly-drivers">Ala / Str</div>
-        <div class="weekly-total">03</div>
+        <div class="team-info">Pete - "Guenther get there..."</div>
+        <div class="weekly-drivers">Ver / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">124</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Sai / Nor</div>
-        <div class="weekly-total">19</div>
+        <div class="weekly-drivers">Ham / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">113</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Ver / Tsu</div>
-        <div class="weekly-total">25</div>
+        <div class="weekly-drivers">Sai / Lan</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">106</div>
       </div>
 
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Rus / Vet</div>
-        <div class="weekly-total">12</div>
+        <div class="weekly-drivers">Per / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">93</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">LeC/ Ric</div>
-        <div class="weekly-total">10</div>
+        <div class="weekly-drivers">Rus / Gas</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">84</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Per / Gas</div>
+        <div class="weekly-drivers">LeC / Tsu</div>
         <div class="weekly-total">00</div>
         <div class="season-total">69</div>
       </div>
