driver spelling error correction

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">LeC / Ala</div>
+        <div class="weekly-drivers">LeC / Alo</div>
         <div class="weekly-total">00</div>
         <div class="season-total">130</div>
       </div>
