--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="header">F1 Fantasy 2022</h1>
     <div class="driver-card">
       <div class="driver-info">
-        <div class="max"><img src="./gif/max.gif" alt="max" /></div>
+        <div class="max"><img src="./gif/maxv.gif" alt="max" /></div>
       </div>
       <div class="driver-info">
         <div class="checko"><img src="./gif/checko.gif" alt="Checko" /></div>
@@ -23,16 +23,16 @@
         <div class="charles"><img src="./gif/charles.gif" alt="Charles" /></div>
       </div>
       <div class="driver-info">
-        <div class="lewis"><img src="./gif/lewis.gif" alt="Lewis" /></div>
+        <div class="lewis"><img src="./gif/lewis-h.gif" alt="Lewis" /></div>
       </div>
       <div class="driver-info">
         <div class="george"><img src="./gif/george.gif" alt="George" /></div>
       </div>
       <div class="driver-info">
-        <div class="lando"><img src="./gif/lando.gif" alt="Lando" /></div>
+        <div class="lando"><img src="./gif/lando-n.gif" alt="Lando" /></div>
       </div>
       <div class="driver-info">
-        <div class="daniel"><img src="./gif/daniel.gif" alt="Daniel" /></div>
+        <div class="daniel"><img src="./gif/daniel-r.gif" alt="Daniel" /></div>
       </div>
     </div>
     <div class="card">
