lando gif update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="george"><img src="./gif/george.gif" alt="George" /></div>
       </div>
       <div class="driver-info">
-        <div class="lando"><img src="./gif/lando-n.gif" alt="Lando" /></div>
+        <div class="lando"><img src="./gif/lando-face.gif" alt="Lando" /></div>
       </div>
       <div class="driver-info">
         <div class="daniel"><img src="./gif/daniel-r.gif" alt="Daniel" /></div>
