--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">26</div>
+        <div class="weekly-drivers">Nor / Gas</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">156</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">15</div>
+        <div class="weekly-drivers">Rus / Mag</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">154</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">10</div>
+        <div class="weekly-drivers">LeC / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">149</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">06</div>
+        <div class="weekly-drivers">Ver / Tsu</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">117</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">21</div>
+        <div class="weekly-drivers">Per / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">105</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">/</div>
-        <div class="weekly-total">16</div>
+        <div class="weekly-drivers">Ham / Sai</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">97</div>
       </div>
     </div>
