--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Rus / Mag</div>
-        <div class="weekly-total">15</div>
+        <div class="weekly-drivers">Nor / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">169</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">Nor / Gas</div>
-        <div class="weekly-total">06</div>
+        <div class="weekly-drivers">Ver / Mag</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">162</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">LeC / Alo</div>
-        <div class="weekly-total">08</div>
+        <div class="weekly-drivers">Sai / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">157</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Ver / Tsu</div>
-        <div class="weekly-total">25</div>
+        <div class="weekly-drivers">Ham / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">142</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Ham / Sai</div>
-        <div class="weekly-total">29</div>
+        <div class="weekly-drivers">Rus / Per</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">126</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Per / Ric</div>
-        <div class="weekly-total">14</div>
+        <div class="weekly-drivers">LeC / Vet</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">119</div>
       </div>
     </div>
