driver update netherlands

--- a/index.html
+++ b/index.html
@@ -47,36 +47,36 @@
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
         <div class="weekly-drivers">LeC / Ala</div>
-        <div class="weekly-total">18</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">205</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Sai / Ric</div>
-        <div class="weekly-total">15</div>
+        <div class="weekly-drivers">Ver / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">194</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Ver / Oco</div>
-        <div class="weekly-total">32</div>
+        <div class="weekly-drivers">Per / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">193</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Per / Bot</div>
-        <div class="weekly-total">18</div>
+        <div class="weekly-drivers">Sai / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">189</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Rus / Nor</div>
-        <div class="weekly-total">12</div>
+        <div class="weekly-drivers">Rus / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">163</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Ham / Mag</div>
+        <div class="weekly-drivers">Ham / Str</div>
         <div class="weekly-total">00</div>
         <div class="season-total">128</div>
       </div>
