--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">LeC / Ala</div>
+        <div class="weekly-drivers">LeC / Alo</div>
         <div class="weekly-total">23</div>
         <div class="season-total">228</div>
       </div>
