--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">LeC / Alo</div>
-        <div class="weekly-total">23</div>
+        <div class="weekly-drivers">Alo / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">228</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Ver / Ric</div>
-        <div class="weekly-total">26</div>
+        <div class="weekly-drivers">Sai / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">220</div>
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Per / Nor</div>
-        <div class="weekly-total">16</div>
+        <div class="weekly-drivers">Ham / Per</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">209</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Sai / Oco</div>
-        <div class="weekly-total">06</div>
+        <div class="weekly-drivers">Ver / Str</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">195</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Rus / Bot</div>
-        <div class="weekly-total">18</div>
+        <div class="weekly-drivers">Rus / Gas</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">181</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Ham / Str</div>
-        <div class="weekly-total">13</div>
+        <div class="weekly-drivers">LeC / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">141</div>
       </div>
     </div>
