--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Lec / Per</div>
-        <div class="weekly-total">43</div>
+        <div class="weekly-drivers">Rus / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">271</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Sai / Str</div>
-        <div class="weekly-total">23</div>
+        <div class="weekly-drivers">Ham / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">255</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">Ver / Gas</div>
-        <div class="weekly-total">07</div>
+        <div class="weekly-drivers">LeC / Str</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">241</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Nor / Alo</div>
-        <div class="weekly-total">12</div>
+        <div class="weekly-drivers">Per / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">232</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Rus / Ham</div>
-        <div class="weekly-total">03</div>
+        <div class="weekly-drivers">Sai / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">203</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Vet / Oco</div>
-        <div class="weekly-total">04</div>
+        <div class="weekly-drivers">Ver / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">163</div>
       </div>
     </div>
