--- a/index.html
+++ b/index.html
@@ -46,39 +46,39 @@
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Rus / Nor</div>
-        <div class="weekly-total">05</div>
-        <div class="season-total">276</div>
-      </div>
-      <div class="season-info-tara">
-        <div class="team-info">Tara - "No Verstoppin Me!"</div>
-        <div class="weekly-drivers">Ham / Alo</div>
-        <div class="weekly-total">16</div>
-        <div class="season-total">271</div>
+        <div class="weekly-drivers">Ver / Vet</div>
+        <div class="weekly-total">29</div>
+        <div class="season-total">305</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "LandoNMe"</div>
-        <div class="weekly-drivers">Per / Oco</div>
-        <div class="weekly-total">30</div>
-        <div class="season-total">262</div>
+        <div class="weekly-drivers">Rus / Alo</div>
+        <div class="weekly-total">17</div>
+        <div class="season-total">279</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Guenther get there..."</div>
-        <div class="weekly-drivers">LeC / Str</div>
-        <div class="weekly-total">15</div>
-        <div class="season-total">256</div>
+        <div class="weekly-drivers">LeC / Nor</div>
+        <div class="weekly-total">23</div>
+        <div class="season-total">279</div>
+      </div>
+      <div class="season-info-tara">
+        <div class="team-info">Tara - "No Verstoppin Me!"</div>
+        <div class="weekly-drivers">Sai / Oco</div>
+        <div class="weekly-total">00</div>
+        <div class="season-total">271</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Sai / Bot</div>
-        <div class="weekly-total">00</div>
-        <div class="season-total">203</div>
+        <div class="weekly-drivers">Ham / Bot</div>
+        <div class="weekly-total">18</div>
+        <div class="season-total">221</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver-Stoned"</div>
-        <div class="weekly-drivers">Ver / Ric</div>
+        <div class="weekly-drivers">Per / Ric</div>
         <div class="weekly-total">25</div>
-        <div class="season-total">188</div>
+        <div class="season-total">213</div>
       </div>
     </div>
     <script src="script.js"></script>
