--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="season-catagories">Season Total</div>
       </div>
       <div class="season-info-scott">
-        <div class="team-info">Scott - "I Monza Toilet"</div>
+        <div class="team-info">Scott - "I'd suck off Verstappen"</div>
         <div class="weekly-drivers">Ver / Vet</div>
         <div class="weekly-total">31</div>
         <div class="season-total">307</div>
@@ -69,7 +69,7 @@
         <div class="season-total">272</div>
       </div>
       <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Legendary Skid Marks"</div>
+        <div class="team-info">Graeme - "Horny for Horner"</div>
         <div class="weekly-drivers">Ham / Bot</div>
         <div class="weekly-total">18</div>
         <div class="season-total">221</div>
