--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="season-total">221</div>
       </div>
       <div class="season-info-jason">
-        <div class="team-info">Jason - "Silver-Stoned"</div>
+        <div class="team-info">Jason - "Riding Riciardo"</div>
         <div class="weekly-drivers">Per / Ric</div>
         <div class="weekly-total">12</div>
         <div class="season-total">200</div>
