points correction and name changes

--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
         <div class="season-catagories">Season Total</div>
       </div>
       <div class="season-info-scott">
-        <div class="team-info">Scott - "I'd suck off Verstappen"</div>
+        <div class="team-info">Scott - "I'd still suck off Verstappen"</div>
         <div class="weekly-drivers">Ver / Vet</div>
-        <div class="weekly-total">31</div>
-        <div class="season-total">307</div>
+        <div class="weekly-total">29</div>
+        <div class="season-total">305</div>
       </div>
       <div class="season-info-pete">
-        <div class="team-info">Pete - "Guenther get there..."</div>
+        <div class="team-info">Pete - "Guenthers not gettin there..."</div>
         <div class="weekly-drivers">LeC / Nor</div>
         <div class="weekly-total">23</div>
         <div class="season-total">279</div>
       </div>
       <div class="season-info-katie">
-        <div class="team-info">Katie - "LandoNMe"</div>
+        <div class="team-info">Katie - "Sorry Katie I'm Gaming - Lando"</div>
         <div class="weekly-drivers">Rus / Alo</div>
-        <div class="weekly-total">11</div>
-        <div class="season-total">273</div>
+        <div class="weekly-total">17</div>
+        <div class="season-total">279</div>
       </div>
       <div class="season-info-tara">
-        <div class="team-info">Tara - "No Verstoppin Me!"</div>
+        <div class="team-info">Tara - "He is saving his V for me"</div>
         <div class="weekly-drivers">Sai / Oco</div>
-        <div class="weekly-total">01</div>
-        <div class="season-total">272</div>
+        <div class="weekly-total">00</div>
+        <div class="season-total">212</div>
       </div>
       <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Horny for Horner"</div>
+        <div class="team-info">Graeme - "Mr Geri Halliwell"</div>
         <div class="weekly-drivers">Ham / Bot</div>
         <div class="weekly-total">18</div>
         <div class="season-total">221</div>
       </div>
       <div class="season-info-jason">
-        <div class="team-info">Jason - "Riding Riciardo"</div>
+        <div class="team-info">Jason - "Daniels Bananana Hammock"</div>
         <div class="weekly-drivers">Per / Ric</div>
         <div class="weekly-total">12</div>
         <div class="season-total">200</div>
