--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
         <div class="season-catagories">Season Total</div>
       </div>
       <div class="season-info-scott">
-        <div class="team-info">Scott - "I'd still suck off Verstappen"</div>
+        <div class="team-info">Scott - "still sucking Verstappen"</div>
         <div class="weekly-drivers">Ver / Vet</div>
         <div class="weekly-total">29</div>
         <div class="season-total">305</div>
       </div>
       <div class="season-info-pete">
-        <div class="team-info">Pete - "Guenthers not gettin there..."</div>
+        <div class="team-info">Pete - "I've been hacked"</div>
         <div class="weekly-drivers">LeC / Nor</div>
         <div class="weekly-total">23</div>
         <div class="season-total">279</div>
       </div>
       <div class="season-info-katie">
-        <div class="team-info">Katie - "Sorry Katie I'm Gaming - Lando"</div>
+        <div class="team-info">Katie - "Driving both ways"</div>
         <div class="weekly-drivers">Rus / Alo</div>
         <div class="weekly-total">17</div>
         <div class="season-total">279</div>
       </div>
       <div class="season-info-tara">
-        <div class="team-info">Tara - "He is saving his V for me"</div>
+        <div class="team-info">Tara - "Mrs Max Vershampion"</div>
         <div class="weekly-drivers">Sai / Oco</div>
         <div class="weekly-total">00</div>
         <div class="season-total">212</div>
       </div>
       <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Mr Geri Halliwell"</div>
+        <div class="team-info">Graeme - "knee deep in Toto"</div>
         <div class="weekly-drivers">Ham / Bot</div>
         <div class="weekly-total">18</div>
         <div class="season-total">221</div>
       </div>
       <div class="season-info-jason">
-        <div class="team-info">Jason - "Daniels Banana Hammock"</div>
+        <div class="team-info">Jason - "Will Bottom 4 Aussies"</div>
         <div class="weekly-drivers">Per / Ric</div>
         <div class="weekly-total">12</div>
         <div class="season-total">200</div>
