drivers and cleared weekly points

--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Verstappens Cock"</div>
-        <div class="weekly-drivers">Ver / Vet</div>
-        <div class="weekly-total">29</div>
+        <div class="weekly-drivers">Lec / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">305</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Gunther get there ..."</div>
-        <div class="weekly-drivers">LeC / Nor</div>
-        <div class="weekly-total">23</div>
+        <div class="weekly-drivers">Sai / Tsu</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">279</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "Lando N Me"</div>
-        <div class="weekly-drivers">Rus / Alo</div>
-        <div class="weekly-total">17</div>
+        <div class="weekly-drivers">Per / Str</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">279</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstapen me"</div>
-        <div class="weekly-drivers">Sai / Oco</div>
+        <div class="weekly-drivers">Ver / Oco</div>
         <div class="weekly-total">00</div>
         <div class="season-total">212</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Wanking Horner"</div>
-        <div class="weekly-drivers">Ham / Bot</div>
-        <div class="weekly-total">18</div>
+        <div class="weekly-drivers">/ Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">221</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver Stoned"</div>
-        <div class="weekly-drivers">Per / Ric</div>
-        <div class="weekly-total">12</div>
+        <div class="weekly-drivers">Per / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">200</div>
       </div>
     </div>
