--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Wanking Horner"</div>
-        <div class="weekly-drivers">/ Alo</div>
+        <div class="weekly-drivers">Rus / Alo</div>
         <div class="weekly-total">00</div>
         <div class="season-total">221</div>
       </div>
