driver and weekly point update

--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Lec / Nor</div>
-        <div class="weekly-total">10</div>
+        <div class="weekly-drivers">Rus / Str</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">315</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstapen me"</div>
-        <div class="weekly-drivers">Ver / Oco</div>
-        <div class="weekly-total">29</div>
+        <div class="weekly-drivers">Per / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">300</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "Lando N Me"</div>
-        <div class="weekly-drivers">Per / Str</div>
-        <div class="weekly-total">15</div>
+        <div class="weekly-drivers">LeC / KMAG</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">294</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Gunther get there ..."</div>
-        <div class="weekly-drivers">Sai / Tsu</div>
-        <div class="weekly-total">10</div>
+        <div class="weekly-drivers">Ver / MSC</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">289</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Rus / Alo</div>
+        <div class="weekly-drivers">Ham / Nor</div>
         <div class="weekly-total">13</div>
         <div class="season-total">234</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver Stoned"</div>
-        <div class="weekly-drivers">Ham / Bot</div>
+        <div class="weekly-drivers">Oco / Sai</div>
         <div class="weekly-total">19</div>
         <div class="season-total">219</div>
       </div>
