final driver changes

--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
       </div>
       <div class="season-info-scott">
         <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Rus / Str</div>
-        <div class="weekly-total">35</div>
+        <div class="weekly-drivers">Sai / Alo</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">350</div>
       </div>
       <div class="season-info-tara">
         <div class="team-info">Tara - "No Verstapen me"</div>
-        <div class="weekly-drivers">Per / Alo</div>
-        <div class="weekly-total">20</div>
+        <div class="weekly-drivers">Ham / Nor</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">320</div>
       </div>
       <div class="season-info-katie">
         <div class="team-info">Katie - "Lando N Me"</div>
-        <div class="weekly-drivers">LeC / KMAG</div>
-        <div class="weekly-total">16</div>
+        <div class="weekly-drivers">Ver / Bot</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">310</div>
       </div>
       <div class="season-info-pete">
         <div class="team-info">Pete - "Gunther get there ..."</div>
-        <div class="weekly-drivers">Ver / MSC</div>
-        <div class="weekly-total">13</div>
+        <div class="weekly-drivers">Rus / Lat</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">302</div>
       </div>
       <div class="season-info-graeme">
         <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">Ham / Nor</div>
-        <div class="weekly-total">26</div>
+        <div class="weekly-drivers">LeC / Oco</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">260</div>
       </div>
       <div class="season-info-jason">
         <div class="team-info">Jason - "Silver Stoned"</div>
-        <div class="weekly-drivers">Oco / Sai</div>
-        <div class="weekly-total">26</div>
+        <div class="weekly-drivers">Per / Ric</div>
+        <div class="weekly-total">00</div>
         <div class="season-total">245</div>
       </div>
     </div>
