--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="header">F1 Fantasy 2022</h1>
-    <div class="driver-card">
+    <!--div class="driver-card">
       <div class="driver-info">
         <div class="max"><img src="./gif/maxv.gif" alt="max" /></div>
       </div>
@@ -34,7 +34,7 @@
       <div class="driver-info">
         <div class="daniel"><img src="./gif/daniel-r.gif" alt="Daniel" /></div>
       </div>
-    </div>
+    </div-->
     <div class="card">
       <div class="season-info-catagory">
         <div class="season-catagory">Constructor</div>
